post__title__decoration: fix alignment of second line

--- a/_scss/_blog.scss
+++ b/_scss/_blog.scss
@@ -250,12 +250,25 @@
     }
     
     .post__title__decoration {
-      background-color: #D8D8D8;
       display: inline;
       padding: 0 rem(10px);
       margin: 0 rem(-10px);
       position: relative;
       z-index: 10;
+      
+      &, &::before {
+        background-color: #D8D8D8;
+      }
+      
+      &::before {
+        position: absolute;
+        content: '';
+        left: 0;
+        width: rem(10px);
+        top: 0;
+        bottom: 0;
+        z-index: -1;
+      }
     }
     
     &::before {
